@@ -1,22 +1,22 @@
 
 =head1 Games::Irrlicht
 
-=head1 Dependencies
+=head1 DEPENDENCIES
 
 You need to install the Irrlicht engine from L<http://irrlicht.sf.net>. I
 created a directory C</usr/local/lib/Irrlicht> and copied there the precompiled
 C<libirrlicht.a>, C<libjpeg.a> and C<libz.a>. I also copied the header files
 to C</usr/include/Irrlicht>.
 
-* untar/ungzip the package (replace 0.01 with the version you got)
+* untar/ungzip the package (replace 0.02 with the version you got)
 
-	tar -xzf Games::Irrlicht-0.01.tar.gz
+	tar -xzf Games::Irrlicht-0.02.tar.gz
 
 * Check the signature. Download my key from http://bloodgate.com/tels.asc or
-  from my CPAN directory. Then do in the build directory (where you unwrapped
-  stuff):
+  from my CPAN directory. Also install Module::Signature if you haven't alrady.
+  Then do in the build directory (where you unwrapped stuff):
 
-	cpansign -v
+	cpansign --verify
 
 * if the signature verifies OK, proceed. Otherwise NOTIFY ME IMMIDIATELY. Do
   NOT INSTALL THE PACKAGE! Your system might get compromised!
@@ -25,11 +25,11 @@ to C</usr/include/Irrlicht>.
 
 	perl Makefile.PL
 
-* For now, please ignore the errors that appear. Then run the testsuite:
+* Then run the testsuite:
 
 	make test
 
-* If some tests fail, please notify me.
+If there are any test failures, please notify me. Thank you!
 
 * If all tests pass, install as root:
 
