@@ -1,5 +1,5 @@
 This file contains message digests of all files listed in MANIFEST,
-signed via the Module::Signature module, version 0.21.
+signed via the Module::Signature module, version 0.38.
 
 To verify the content in this distribution, first make sure you have
 Module::Signature installed, then type:
@@ -13,76 +13,43 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 2727a367c164f4d58d2df97c34436635993cd23c BUGS
-SHA1 ced6ff5f57da813f5ff24ff048402b6ed5248b04 CHANGES
-SHA1 aef6e5848fa96b4cf248c14f2d3ee88976cbb433 CREDITS
-SHA1 18727d0fac77358fdfa952be70f34c0ca2c7da47 FPS.xs
+SHA1 f385ee630fd9153ce3f57ce6b2e08765e02388bd BUGS
+SHA1 4d148b4a2705522201314cd143816a0a41246878 CHANGES
+SHA1 adbaf1438d86810b9f33312ce4625e634fb3d6f7 Irrlicht.xs
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 f8e43951ba103d8a34058299ac1161b98fda8e74 MANIFEST
-SHA1 1bec5dcd61e733e16f3ae9cf26392ab470b49506 Makefile.PL
-SHA1 aa0b01d7439f37f99fd11bd13d43c87b9efaad24 NEW
-SHA1 88f30db4d0aa92b6ae789ab83d9fc846f4a8a81f README
-SHA1 a3e85fd47ed1285f222cdae1ebff4c8d664674c6 TODO
-SHA1 52f89972a7fc125c75e4f1fad9b1d14aab6f819b examples/boulder/boulder.pl
-SHA1 69b3f125b59c8da2b1ec5a6438998fc44f599807 examples/boulder/data/level0001.txt
-SHA1 0c84e52cf263184ab4875463f4dddffbf22cdf9e examples/boulder/lib/SDL/App/FPS/MyBoulder.pm
-SHA1 128b9f606cf0d047cce6125d94026978ab5325a7 examples/boulder/lib/SDL/App/FPS/MyCave.pm
-SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 examples/boulder/save/quicksave.txt
-SHA1 05c09059ceafcafb44cb7eab43ebdae02aae7676 examples/buttons.pl
-SHA1 419fd87d3aa8062c3337d12f5b44addc3e89bb07 examples/colors.pl
-SHA1 0c712c061c074abedcbfc748be38f1dfc23ae474 examples/config/mandel.cfg
-SHA1 6facc1aaa42ab05280466d9b3c491f07106bac1a examples/config/opengl.cfg
-SHA1 662601134b576256feffad5ed91d48e4bbeffe95 examples/data/console.fnt
-SHA1 fe7311d4b22922ce4a4e666174c0bf9e359d0ff3 examples/data/courier.bmp
-SHA1 8954faa20420dab7a70c0acb968d848cdc6de752 examples/data/fps.fnt
-SHA1 85c803f1b0f5cf0be70adf02e5d21624e7f933dd examples/demo.pl
-SHA1 10b58307f8e723edd65182fb75669d941fb17f83 examples/empty.pl
-SHA1 2a7cc010a592cd18e442c106f7b845236fb28646 examples/event.pl
-SHA1 e0316c996f04d64146c162c50b4a58bb29cebcce examples/keycheck.pl
-SHA1 e87e4c4c8749f54e8063d2f8272ec72dc1cf95e8 examples/lib/SDL/App/FPS/Demo.pm
-SHA1 c1bb81e97c2197bb308e774ee29b4686ccfcdfe9 examples/lib/SDL/App/FPS/Empty.pm
-SHA1 74c574576a379cf06539e251758f5ab21a39a5db examples/lib/SDL/App/FPS/MyButt.pm
-SHA1 4b57ba2581b8780de7b30491a98390a07f3cc269 examples/lib/SDL/App/FPS/MyColors.pm
-SHA1 6d9db82d3396d3ceda1e96dabe6debac095379d7 examples/lib/SDL/App/FPS/MyEvent.pm
-SHA1 c9bb15cb81d9ceb55fe3389c4fc964549c3e1b8b examples/lib/SDL/App/FPS/MyKeyCheck.pm
-SHA1 bb5ea6a6c2be3ccb9c80bc064ca0441ec4562a7b examples/lib/SDL/App/FPS/MyMandel.pm
-SHA1 a07d722cfa3f41c619236ee1fb902610f2d38d58 examples/lib/SDL/App/FPS/MyMouse.pm
-SHA1 09e23523242f6aaa9fdf0e36b5e50ecb79cdd5c3 examples/lib/SDL/App/FPS/MyOpenGL.pm
-SHA1 824ebc2ae683cda82d0330e04924c3f7aca2d197 examples/mandel.pl
-SHA1 c01ba7b5cd912efb4eb753f4cc7f242658032015 examples/mouse.pl
-SHA1 e0a1ecf190ceb60ea60f09de632ed5a1549dfc56 examples/opengl.pl
-SHA1 36018b3e86eecd89ea83e1304a2a74b6dfa5c2de lib/SDL/App/FPS.pm
-SHA1 46490a523a90ddb583f7e27a08b02a8f08db5e00 lib/SDL/App/FPS/Button.pm
-SHA1 5f98b8cdfeab77429547d629645bb7be8549ad26 lib/SDL/App/FPS/Color.pm
-SHA1 6e40afd02de4975ce795ef4bb509534d725be76b lib/SDL/App/FPS/EventHandler.pm
-SHA1 15553751e5c63cdb79bde6a2ba2d2b65bc6fa469 lib/SDL/App/FPS/Group.pm
-SHA1 21a369a148cf0f58ba48c636525c255b13fa8996 lib/SDL/App/FPS/Thingy.pm
-SHA1 7e4672ce82aa9607eec9ac4018252a13df4549a3 lib/SDL/App/FPS/Timer.pm
-SHA1 a83c8906445a93ec6ebc3804435df4cbd43d5f68 t/SDL/App/MyFPS.pm
-SHA1 6c122d4a331d9e14aac12b5e094f5978424b815e t/SDL/App/MyFPS2.pm
-SHA1 41845f956bf349ff20125f086831426dbbbcc6c4 t/button.t
-SHA1 4a863a54e485c30feb3c4bf48860c35af3724185 t/color.t
-SHA1 cb327011656d343468b228dc8e52eeb85e842a03 t/config/client.cfg
-SHA1 6365f2040e5c100b6cbb6fea076db19cc9db4c93 t/config/test.cfg
-SHA1 cb072b13efd42c41154151da01f09837f9edf912 t/event.t
-SHA1 99c8c46b31250e3971b5cba399478d827f5ddde9 t/fps_timer.t
-SHA1 55a4805c0d62db74c53da47417a0bbf3490fa987 t/group.t
-SHA1 45eee75896977e6843ff724d039e6d7f47f2cc4a t/mycfg.t
-SHA1 d61a996f1762017ded402cbb9884105f15bb4ca3 t/myfps.t
-SHA1 47224ac3001fcfb0f74ff86d0902ae399690421b t/myopt.t
-SHA1 14dd3a3969ac4aa6809c09f910fdb001481a7897 t/test-data/console.fnt
-SHA1 04bbc3b7c2d3e3374647b8cab31dd0acf3dd5287 t/test-data/fps.fnt
-SHA1 e26275bc4c63d360c2ec02c361ec44899575beb1 t/thingy.t
-SHA1 9d6f156d9ac31d7e8c7161e61e2a94f9d6c399b1 t/timer.t
+SHA1 d557bf487f5157513bd030ba39f0a51729bd6f1a MANIFEST
+SHA1 74034c51386afea8529dbc67314eb46e0c884802 META.yml
+SHA1 f3a03df77ae5278ee1e3212f3eafd4f2dd48df5d Makefile.PL
+SHA1 9102cf19041123822cd611c9ee0a586f385a4972 NEW
+SHA1 43e646710dcc468f1dcd1a180891f75b6f3b2fee README
+SHA1 35d9fced358de3d95b9060ec0d8a26c0e98c2f5e TODO
+SHA1 6e2693d1100441762afdd8ac89e9a7229e2836a0 examples/lib/Games/Irrlicht/TechDemo.pm
+SHA1 92103edbc56d4e53f402b8ed9e24c4460cb40f63 examples/techdemo.pl
+SHA1 34acd1620cc66850f402f5c2bc6d536d64be044f lib/Games/Irrlicht.pm
+SHA1 e52a24d50a6d086015f00f8ac8917e45caac3d6c lib/Games/Irrlicht/EventHandler.pm
+SHA1 da254802c350218f96448f2dd9e37cb7e3351136 lib/Games/Irrlicht/Group.pm
+SHA1 346e05d4459195ba647d2be6f48d87b175823526 lib/Games/Irrlicht/Thingy.pm
+SHA1 a3b2f61f8908ed926bceeee9d61aae01a4a916c7 lib/Games/Irrlicht/Timer.pm
+SHA1 244b79828de68c21e44940d471de20411b3e29d1 t/Games/Irrlicht/MyApp.pm
+SHA1 534f4eac0f901f6db0d8896fefd4bef7b1a12e5c t/config/client.cfg
+SHA1 b0fe0ebd9a7aff893c75ca81f81a34f1d3963713 t/config/test.cfg
+SHA1 8c631a050bb8db45f440cd5a60129b5b6b90d05c t/config/test2.cfg
+SHA1 6960886e599c8baaf1fa66613b9efc372d3426bf t/irrlichtpm.t
+SHA1 a14f9fd152f1454ddef2b1c3ce0f003ac9a7afcd t/media/test.zip
+SHA1 44eb9f45aa449d6b42c4abb2756bf62d2ce67699 t/mycfg.t
+SHA1 8bf84ab0d39359ed8a864b8c7128950618ac8b42 t/myirrlicht.t
+SHA1 7c963266c5be9ab51029650635031e0e02185417 t/myopt.t
+SHA1 458d53878668b2113196ed59e0b1bdcda44bcb98 t/thingy.t
+SHA1 e07ff63a4ee4a2186bbceae8379aee252eabc9a4 t/timer.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.0.6 (GNU/Linux)
+Version: GnuPG v1.2.2-rc1-SuSE (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPqEsA3cLPEOTuEwVAQFOqgf+L/+ClJRp0uYEbLTUL4OEq6b2Py7y3+gA
-L9o7fEVoRlu+C3FMkUWYL1+KLdo9yb8dehWoW/Cgyjso6BuJBHlnDpCgZkjv0EYG
-KcQe3wBZr9UeOzSbAUthp3mbQNUD0YHqlUVJ6TiRjyWgBkeN3JvkNA2jtfvOz2+x
-Kz62SKwSmlDxsYNiAYcgwyxprmpHQXygZjcBqcissFMqNpoRXqK5mSnRSId5Pwbf
-9H2FyOQksuwkm/bkahwoGy4HvR2YmrfVcWUlhwPsKboRCY6F4z8K8VkKrM7vfTrG
-z2gNuHsDUFSDXW4UbTk8cQgXk8Gm/lAppAA4lgTGS3xeCyhdvovplw==
-=3c/h
+iQEVAwUBQEHm4XcLPEOTuEwVAQHkggf8CThYODQhavg/s88t7LJWZxyAswew3UJQ
+nsHbyAesLts8yKDlh+yD1cE41RffLJmJKMMB9K7Ib/EfU0Gj/A6bhq4hTCjSfHtT
+SVgblcnr6pWl1O3SNLcXvAwas4K5gT2f3b3jIH3qQnRaDTHXAHylhr7/AXXRTDfP
+KUoftKg68GcrO12+rdHXAob6LlebpZccJ28WbpJjo1lSqtd+O8QPHzqThsCJBCxN
+lTJ2weL0WU16UwF7sZVpy7e5lRNhlNZeQ1H378Beu4V/HZgml+y00XKo9Hki1FqT
+0UAMpBYTwNCGx5ewUyJYkEmoI6vBuSLuUqEXXgTTjoJpUA6ERIZeWw==
+=GSCZ
 -----END PGP SIGNATURE-----
