@@ -2,11 +2,10 @@
 ############################################################################## 
 Games::Irrlicht
 
-* The Makefile.pL and assorted stuff is totally botched. I could not get
-  MakeMaker to generated code that will compile or link. So I tricked it
-  with a hand-rolled batch job (./m) and since make test always compiled
-  the non-working version, call ./ from t/00.t as the first thing.
-  Ugh!
+* Games::Irrlicht should get you access to the driver, device, filemanager etc
+  and then let you call functions on them. Currently all functions from them
+  are global, which won't work in the long run.
+* The techdemo should be converted to Perl just to show we can do it
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
