@@ -10,12 +10,15 @@ BEGIN
   use lib '../blib/lib';
   use lib '../blib/arch';
   chdir 't' if -d 't';
-  plan tests => 3;
+  plan tests => 5;
   use_ok ('Games::Irrlicht');
   }
 
 can_ok ('Games::Irrlicht', qw/ 
-  new _next_frame _init  
+  new _next_frame _init
+  hide_mouse_cursor
+  addCameraSceneNodeFPS 
+  getPrimitiveCountDrawn
   /);
 
 my $app = Games::Irrlicht->new();
@@ -23,7 +26,19 @@ my $app = Games::Irrlicht->new();
 is (ref($app), 'Games::Irrlicht');
 
 my $i = 0;
-while ($i++ < 1000)
+while ($i++ < 70)
   {
   $app->_next_frame();
   }
+
+is ($app->getPrimitiveCountDrawn(), 0, 'primitives drawn');
+
+$app->addCameraSceneNodeFPS();
+
+is ($app->addZipFileArchive('media/test.zip'), 1,
+  'Could add zip file');
+
+# debug XXX TODO (this actually works)
+#$app->addZipFileArchive('../examples/media/map-20kdm2.pk3');
+#$app->loadBSP ("20kdm2.bsp");
+
